--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077776.md#1" title="遭央视连骂三天 蓬佩奥反在中国人气飙升""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/Unknown-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12078752.md#1" title="调查世卫和中共关系 川普手握一张王牌""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/04/GettyImages-959790390-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/wdr216/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://wdr216.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
-:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081017.md#1">日本便当店行善 儿童购买可等长大后再付钱</a><br>
-:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080859.md#1">广州检疫点爆打斗事件 市民被打骨折</a><br>
+:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080974.md#1">纽约州塑料袋禁令推迟至6月15日执行</a><br>
+:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080954.md#1">纽约大学学生要求退部分学费</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
+:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081017.md#1">日本便当店行善 儿童购买可等长大后再付钱</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080859.md#1">广州检疫点爆打斗事件 市民被打骨折</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/3/25/n11974588.md#1">持续更新：亚省“中共病毒”疫情一览</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080940.md#1">韩国官员：无迹象显示金正恩动过手术</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080831.md#1">对世卫失信心 美国继续独立研发肺炎疫苗</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078278.md#1">【一线采访】北京新规 房地产恐面临倒闭潮</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078410.md#1">两会前“红二代”发信对掐？中南海博弈激烈</a><br>
